// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "headline-1", align: left, color: default, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: left;
  color: #010205;
  white-space: inherit;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "headline-2", align: left, color: default, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: left;
  color: #010205;
  white-space: inherit;
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "headline-3", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "headline-4", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 clamp(1.2rem, .12vw + 1.18rem, 1.31rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "headline-5", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "inherit", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: inherit;
  font-weight: 600;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: "large-title", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 clamp(2.49rem, 1.51vw + 2.19rem, 3.84rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css deprecated p-headline for variant: {"base":"small","xs":"large","s":"small","m":"large","l":"small","xl":"large"}, align: right, color: inherit, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: right;
  color: inherit;
  white-space: inherit;
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
@media(min-width:480px) {
  .root {
    font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:760px) {
  .root {
    font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:1000px) {
  .root {
    font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:1300px) {
  .root {
    font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:1760px) {
  .root {
    font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: "inherit", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: inherit;
  font-weight: 600;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css for size: "large-title", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 clamp(2.49rem, 1.51vw + 2.19rem, 3.84rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 clamp(1.2rem, .12vw + 1.18rem, 1.31rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: center;
  color: inherit;
  white-space: nowrap;
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}"
`;

exports[`getComponentCss() should return correct css for size: "x-large", align: left, color: default, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: left;
  color: #010205;
  white-space: inherit;
  font: normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for size: "xx-large", align: left, color: default, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: left;
  color: #010205;
  white-space: inherit;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"large","s":"small","m":"large","l":"small","xl":"large"}, align: right, color: inherit, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  padding: 0;
  margin: 0;
  text-align: right;
  color: inherit;
  white-space: inherit;
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
@media(min-width:480px) {
  .root {
    font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:760px) {
  .root {
    font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:1000px) {
  .root {
    font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:1300px) {
  .root {
    font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}

@media(min-width:1760px) {
  .root {
    font: normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  }
}
"
`;

exports[`getSizeJssStyle() should return correct css for textSize: inherit 1`] = `
{
  "fontSize": "inherit",
  "fontWeight": 600,
}
`;

exports[`getSizeJssStyle() should return correct css for textSize: large 1`] = `
{
  "font": "normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getSizeJssStyle() should return correct css for textSize: medium 1`] = `
{
  "font": "normal normal 600 clamp(1.2rem, .12vw + 1.18rem, 1.31rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getSizeJssStyle() should return correct css for textSize: small 1`] = `
{
  "font": "normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getSizeJssStyle() should return correct css for textSize: x-large 1`] = `
{
  "font": "normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getSizeJssStyle() should return correct css for textSize: xx-large 1`] = `
{
  "font": "normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getVariantJssStyle() should return correct css for variant: headline-1 1`] = `
{
  "font": "normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getVariantJssStyle() should return correct css for variant: headline-2 1`] = `
{
  "font": "normal normal 600 clamp(1.73rem, .57vw + 1.61rem, 2.24rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getVariantJssStyle() should return correct css for variant: headline-3 1`] = `
{
  "font": "normal normal 600 clamp(1.44rem, .3vw + 1.38rem, 1.71rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getVariantJssStyle() should return correct css for variant: headline-4 1`] = `
{
  "font": "normal normal 600 clamp(1.2rem, .12vw + 1.18rem, 1.31rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getVariantJssStyle() should return correct css for variant: headline-5 1`] = `
{
  "font": "normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`getVariantJssStyle() should return correct css for variant: large-title 1`] = `
{
  "font": "normal normal 600 clamp(2.49rem, 1.51vw + 2.19rem, 3.84rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;
